<resources>
    <string name="app_name">Mazor Medical Clinic</string>
    <string name="welcome">Welcome to Mazor Medical Clinic !</string>
    <string name="book_appointment">Schedule a Doctor Appointment</string>
    <string name="contact">Contact Us</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="mail_us">Send us an email:</string>
    <string name="select_doctor">Select a Doctor:</string>
    <string name="dr1">Dr. Haim Cohen</string>
    <string name="dr2">Dr. Yakov Itshaki</string>
    <string name="dr3">Dr. Abraham Avinu</string>
    <string name="dr4">Dr. Yaron Berlad</string>
    <string name="dr5">prof. Tamat Slobodov</string>
    <string name="dr6">Dr. Evyatar Kats</string>
    <string name="dr7">Prof. Daniel Levi</string>
    <string name="orthopedics">Orthopedics</string>
    <string name="ent">Ear-Nose-Throat (ENT)</string>
    <string name="family_doctor">Family Medicine</string>
    <string name="back">Back</string>
    <string name="dr8">Dr. Gadi Michelashvili</string>
    <string name="dr9">Prof. Osnat Rabin</string>
    <string name="exit">Exit</string>
    <string name="our_address">Our Address:</string>
    <string name="address">HaGefen 29, Mazor</string>
    <string name="israel">Israel</string>
    <string name="appointment_setted">"Your appointment has been scheduled with "</string>
    <string name="on">"On: "</string>
    <string name="at">"At: "</string>
    <string name="back_to_main_menu">Back to Main Menu</string>
    <string name="phone">Our Phone Number:</string>
    <string name="call">Call</string>
    <string name="pls_grant_call_per">Please grant call permission.</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="send_with">Send with:</string>
    <string name="waze">Navigate with Waze</string>
    <string name="add_to_calendar">Add an Event to Calendar</string>
    <string name="calendar_name">"An appointment with "</string>
    <string name="search">Search</string>
    <string name="search_on_google">Search about your Doctor on Google:</string>
    <string name="type_to_search">Type value for Google search . . .</string>
    <string name="add_alarm">Add a reminder on alarm</string>
    <string name="reminder_msg">Reminder: The appointment with your doctor is in an hour.</string>
    <string name="sms_teq_support">Send us SMS for technical support</string>
</resources>
