<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background2"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/appointment_approveTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:padding="10dp"
        android:text="@string/appointment_setted"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingEnd="10dp"
        android:textStyle="bold"
        android:paddingStart="10dp"
        android:text="@string/on"
        android:textSize="22sp"
        android:textColor="#FFFFFF"
        android:id="@+id/dateTv"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="start"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/at"
        android:textSize="22sp"
        android:textColor="#FFFFFF"
        android:id="@+id/timeTv"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_to_calendar_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:text="@string/add_to_calendar"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/shape_selector1"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/alarm_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:text="@string/add_alarm"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/shape_selector1"
            android:textColor="#FFFFFF"/>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccentLight"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/search_on_google"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FFFFFF"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:padding="8dp"
            android:hint="@string/type_to_search"
            android:background="@drawable/btn_shape"
            android:textAlignment="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/editText"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/search"
            android:id="@+id/search_btn"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            android:background="@drawable/shape_selector1"
            android:textColor="#FFFFFF"/>


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/back_to_main_menu_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:text="@string/back_to_main_menu"
            android:textAlignment="center"
            android:layout_above="@+id/exit_btn"
            android:textSize="20sp"
            android:background="@drawable/shape_selector1"
            android:textColor="#FFFFFF"/>

        <Button
            android:id="@+id/exit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:text="@string/exit"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:textSize="20sp"
            android:background="@drawable/shape_selector2"
            android:textColor="#FFFFFF"/>

    </RelativeLayout>



</LinearLayout>