<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background2"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:padding="10dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="#FFFFFF"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="40dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/book_appointment"
        android:id="@+id/book_btn"
        android:background="@drawable/shape_selector1"
        android:textColor="#FFFFFF"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/contact"
        android:id="@+id/contact_btn"
        android:background="@drawable/shape_selector1"
        android:textColor="#FFFFFF"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="25dp"
            android:paddingTop="25dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/exit"
            android:id="@+id/exit_btn"
            android:layout_alignParentBottom="true"
            android:background="@drawable/shape_selector2"
            android:textColor="#FFFFFF"/>


    </RelativeLayout>






</LinearLayout>


