<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background2"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:padding="10dp"
            android:text="@string/our_address"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FFFFFF"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/address"
                    android:textSize="17sp"
                    android:textColor="#FFFFFF"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="7316000"
                    android:textSize="17sp"
                    android:textColor="#FFFFFF"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/israel"
                    android:textSize="17sp"
                    android:textColor="#FFFFFF"/>


            </LinearLayout>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="2dp"
                android:textSize="15sp"
                android:id="@+id/waze_btn"
                android:text="@string/waze"
                android:gravity="center"
                android:textAlignment="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/shape_selector1"
                android:textColor="#FFFFFF"

                />






        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:text="@string/phone"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FFFFFF"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="03-9668572"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:id="@+id/dial_btn"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            >


            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:textSize="15sp"
                android:textAlignment="center"
                android:text="@string/add_to_contacts"
                android:id="@+id/add_to_contacts_btn"
                android:background="@drawable/shape_selector1"
                android:textColor="#FFFFFF"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="15dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:textSize="15sp"
                android:textAlignment="center"
                android:text="@string/call"
                android:id="@+id/call_btn"
                android:background="@drawable/shape_selector1"
                android:textColor="#FFFFFF"/>

    </LinearLayout>








    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:background="@color/colorAccentLight"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/mail_us"
            android:textStyle="bold"
            android:textSize="35sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FFFFFF"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject"
            android:textSize="15sp"
            android:padding="8dp"
            android:background="@drawable/btn_shape"
            android:textAlignment="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:id="@+id/subjectEt"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="15sp"
            android:padding="8dp"
            android:gravity="center"
            android:background="@drawable/btn_shape"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:id="@+id/bodyEt"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/send"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            android:id="@+id/send_btn"
            android:background="@drawable/shape_selector1"
            android:textColor="#FFFFFF"/>


    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:text="@string/back"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:textSize="20sp"
            android:background="@drawable/shape_selector2"
            android:textColor="#FFFFFF"/>

    </RelativeLayout>



</LinearLayout>